[gd_scene load_steps=6 format=3 uid="uid://m0lekvgeypdo"]

[ext_resource type="Script" path="res://scripts/file_manager.gd" id="1_ly64k"]
[ext_resource type="PackedScene" uid="uid://dx3f123ayei5m" path="res://scenes/window.tscn" id="2_i0yrd"]
[ext_resource type="Texture2D" uid="uid://c3yywcwp7kvce" path="res://assets/icons/terminal_cmd.png" id="3_o7a84"]

[sub_resource type="LabelSettings" id="LabelSettings_qt32x"]
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_vfqm0"]
font_size = 10

[node name="FileManager" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ly64k")

[node name="Window" parent="." instance=ExtResource("2_i0yrd")]
layout_mode = 0
offset_right = 706.0
offset_bottom = 397.0
titlebar_text = "FileManager"
icon = ExtResource("3_o7a84")

[node name="Tree" type="Tree" parent="Window"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 38.0
offset_right = 228.0
offset_bottom = -4.0
grow_vertical = 2

[node name="Perms" type="Panel" parent="Window"]
layout_mode = 0
offset_left = 234.0
offset_top = 330.0
offset_right = 588.0
offset_bottom = 393.0
theme_type_variation = &"PanelOpaque"

[node name="RichTextLabel" type="RichTextLabel" parent="Window/Perms"]
layout_mode = 0
offset_left = 66.0
offset_top = 11.0
offset_right = 199.0
offset_bottom = 41.0
theme_type_variation = &"MonoTextLabel"
bbcode_enabled = true
text = "[font_size=24]rwxrwxrwx[/font_size]"

[node name="type" type="LineEdit" parent="Window/Perms"]
layout_mode = 0
offset_left = 4.0
offset_top = 7.0
offset_right = 68.0
offset_bottom = 44.0
theme_override_font_sizes/font_size = 24
placeholder_text = "-"
alignment = 2
max_length = 1

[node name="owner" type="LineEdit" parent="Window/Perms"]
layout_mode = 0
offset_left = 235.0
offset_top = 2.0
offset_right = 351.0
offset_bottom = 29.0
placeholder_text = "root"

[node name="group" type="LineEdit" parent="Window/Perms"]
layout_mode = 0
offset_left = 235.0
offset_top = 32.0
offset_right = 351.0
offset_bottom = 59.0
placeholder_text = "root"

[node name="1" type="CheckBox" parent="Window/Perms"]
layout_mode = 0
offset_left = 67.0
offset_top = 35.0
offset_right = 83.0
offset_bottom = 59.0

[node name="2" type="CheckBox" parent="Window/Perms"]
layout_mode = 0
offset_left = 81.0
offset_top = 35.0
offset_right = 97.0
offset_bottom = 59.0

[node name="3" type="CheckBox" parent="Window/Perms"]
layout_mode = 0
offset_left = 95.0
offset_top = 35.0
offset_right = 111.0
offset_bottom = 59.0

[node name="4" type="CheckBox" parent="Window/Perms"]
layout_mode = 0
offset_left = 110.0
offset_top = 35.0
offset_right = 126.0
offset_bottom = 59.0

[node name="5" type="CheckBox" parent="Window/Perms"]
layout_mode = 0
offset_left = 124.0
offset_top = 35.0
offset_right = 140.0
offset_bottom = 59.0

[node name="6" type="CheckBox" parent="Window/Perms"]
layout_mode = 0
offset_left = 138.0
offset_top = 35.0
offset_right = 154.0
offset_bottom = 59.0

[node name="7" type="CheckBox" parent="Window/Perms"]
layout_mode = 0
offset_left = 153.0
offset_top = 35.0
offset_right = 169.0
offset_bottom = 59.0

[node name="8" type="CheckBox" parent="Window/Perms"]
layout_mode = 0
offset_left = 167.0
offset_top = 35.0
offset_right = 183.0
offset_bottom = 59.0

[node name="9" type="CheckBox" parent="Window/Perms"]
layout_mode = 0
offset_left = 181.0
offset_top = 35.0
offset_right = 197.0
offset_bottom = 59.0

[node name="Label" type="Label" parent="Window/Perms"]
layout_mode = 0
offset_left = 78.0
offset_top = 3.0
offset_right = 118.0
offset_bottom = 26.0
text = "user"
label_settings = SubResource("LabelSettings_qt32x")

[node name="Label6" type="Label" parent="Window/Perms"]
layout_mode = 0
offset_left = 25.0
offset_top = 44.0
offset_right = 65.0
offset_bottom = 67.0
text = "type"
label_settings = SubResource("LabelSettings_qt32x")

[node name="Label4" type="Label" parent="Window/Perms"]
layout_mode = 0
offset_left = 201.0
offset_top = 9.0
offset_right = 235.0
offset_bottom = 24.0
text = "owner"
label_settings = SubResource("LabelSettings_qt32x")

[node name="Label2" type="Label" parent="Window/Perms"]
layout_mode = 0
offset_left = 118.0
offset_top = 3.0
offset_right = 164.0
offset_bottom = 26.0
text = "group"
label_settings = SubResource("LabelSettings_vfqm0")

[node name="Label3" type="Label" parent="Window/Perms"]
layout_mode = 0
offset_left = 161.0
offset_top = 3.0
offset_right = 207.0
offset_bottom = 26.0
text = "other"
label_settings = SubResource("LabelSettings_vfqm0")

[node name="Label5" type="Label" parent="Window/Perms"]
layout_mode = 0
offset_left = 201.0
offset_top = 39.0
offset_right = 235.0
offset_bottom = 54.0
text = "group"
label_settings = SubResource("LabelSettings_qt32x")

[connection signal="item_selected" from="Window/Tree" to="." method="_on_tree_item_selected"]
[connection signal="text_changed" from="Window/Perms/type" to="." method="_on_type_text_changed"]
[connection signal="text_changed" from="Window/Perms/owner" to="." method="_on_owner_text_changed"]
[connection signal="text_changed" from="Window/Perms/group" to="." method="_on_group_text_changed"]
